[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
ipykernel = "^6.28.0"
jinja2 = "^3.1.2"
folium = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
